--- a/part2/CuSP/cumulative.tex
+++ b/part2/CuSP/cumulative.tex
@@ -307,6 +307,7 @@ manière à obtenir une fonction en escalier, appelée {\it profil
   obligatoire de la ressource}.  
 
 \begin{defi}
+\label{def:profil_oblig}
   Le {\bf profil obligatoire} d'une ressource $TT_{\cal A}$ est définie
   par la fonction suivante: $TT_{\cal A}(t)= \sum_{\substack{i \in {\cal
         A}\\ \LS \le t < \EE}} b_i ,\ \forall t \in \H$.  Le problème n'admet
