--- a/part2/CECSP/PPC_CECSP.tex
+++ b/part2/CECSP/PPC_CECSP.tex
@@ -1,20 +1,22 @@
-\chapter{Algorithmes issus de la programmation par contraintes}
+\chapter{Algorithmes issus de la programmation par contraintes pour le
+\CECSP}
 \label{sec:PPC_CECSP}
 Dans ce chapitre, nous décrivons des algorithmes et modèles issus de
 la programmtion par contrainte. Les deux premières sections sont
 dédiées à la présentation d'algorithmes de filtrage pour le problème
-de décision du \CECSP. En effet, ce problème étant NP-complet, un
-algorithme assurant la cohérence des bornes de chaque variable -
-assurant l'existance d'une solution où les valeurs de chaque 
-variables sont comprises dans ces bornes - ne peut s'exécuter en temps
-polynomial. Par conséquent, plusieurs relaxations sont proposées afin
-de supprimer les valeurs possibles de début et fin de tâches
+de décision du \CECSP. En effet, comme dans le cas du \CUSP, la
+NP-complétude de ce problème implique qu'un algorithme assurant la
+cohérence des bornes de chaque variable - assurant l'existance d'une
+solution où les valeurs de chaque variables sont comprises dans ces
+bornes - ne peut s'exécuter en temps polynomial. Par conséquent,
+plusieurs relaxations sont proposées afin de supprimer les valeurs
+possibles de début et fin de tâches
 incohérentes en temps polynomial. 
 
 Les premières relaxations présentées sont basées sur le raisonnement
-Time-table pour le \CUSP~\cite{TTLah} tandis que la dernière se base
-sur le raisonnement énergétique défini pour ce même
-problème~\cite{RELopez}.
+Time-table pour le \CUSP, décrit dans le
+paragraphe~\ref{sec:cumu_propag}, tandis que la dernière se base sur
+le raisonnement énergétique défini pour ce même problème.
 
 Dans un second temps, nous présentons un modèle de programmation par
 contraintes permettant de résoudre le \CECSP~ discret, i.e. où les
