--- a/newcommand.tex
+++ b/newcommand.tex
@@ -42,7 +42,7 @@
 \newtheorem{ex}{Exemple}[section]
 \newtheorem{lemma}{Lemme}[chapter]
 \newtheorem{prop}{Proposition}[chapter]
-\newtheorem{reg}{Règle}[part]
+\newtheorem{reg}{Règle}[chapter]
 %%%%%%%%%% TIKZ %%%%%%%%%%%%%
 
 \tikzset{every node/.style={circle,minimum size=0pt,node
