--- a/part2/CuSP/cumulative.tex
+++ b/part2/CuSP/cumulative.tex
@@ -1281,92 +1281,44 @@ d'intervalle minimum de superposition.
 \begin{ex}
 La figure~\ref{fig:moi_CUSP} illustre l'intervalle minimum de
 superposition d'une activité $i$ ne possédant pas de partie
-obligatoire. 
-  \begin{figure}[!htb]
-    \subcaptionbox{Ordonnancement au plus tôt}[0.3\linewidth]{
+obligatoire. \begin{figure}[!htb]
+  \begin{center}
     \begin{tikzpicture}
-      [xscale=0.25, yscale= 0.25,node distance=0.5cm]
-      \node (sil) at (1,0) {} ;
-      \node (eil) at (5,0) {} ;
-      \node [below of=eil,node distance=0.63cm]  {$\EE$};
-      \draw (sil.center) node[below=0.2cm] {$\ES$};
-      \node (sir) at (9,0) {} ;
-      \node (eir) at (13,0) {} ;
-      \node[below of= sir,node distance=0.63cm] {$\LS$};
-      \draw (eir.center) node[below=0.2cm] {$\LE$};
+      [xscale=0.5, yscale= 0.4,node distance=0.5cm][decoration={brace}]
+      \node (sil) at (0,0) {} ;
+      \node (sir) at (10,0) {}; 
+      \draw (10,0) node[below] {$lst_i$};
+      \node (eir) at (14,0) {} ;
+      \node (eil) at (4,0) {} ;
+      \draw (4,0) node [below]  {$eet_i$} ;
+    %  \node [below of=eil]  {$eet_i$}; 
+    %  \node[below of= sir] {$lst_i$};
+      \draw (sil.center) node[below] {$est_i$}--
+      (eir.center) node[below] {$let_i$};
       
-      \draw (0,0) -- (14,0);
+      \draw[line width=3pt] (0,0.5) -- (0,2);
+      \draw[line width=3pt] (14,0.5) -- (14,2);
+      \draw[line width=3pt] (0,3) -- (0,4.5);
+      \draw[line width=3pt] (14,3) -- (14,4.5);
+
+      \fill[gray!80] (3,0.6) rectangle (10,1.9) node[midway,color=black] {$\mathbf{moi_i}$};
+      \fill[gray!80] (3,3.1) rectangle (10,4.4) node[midway,color=black] {$\mathbf{moi_i}$};
       
-      \draw[densely dotted] (9.05,0) -- (9.05,3);
-      \draw[densely dotted] (4.95,0) -- (4.95,3);
-      \draw[<->] (0,0.1) -- (0,2) node[midway,left] {$b_i$};
-      \draw[fill=white] (1,0) rectangle (5,2) node[midway] {$i$};
-      \draw[line width=3pt] (1,0) -- (1,3);
-      
-      \foreach \i in {0,...,14} {
-        \draw (\i,0)  -- (\i,-0.2);
-      }
-    \end{tikzpicture}
-}
-\hfill
-\subcaptionbox{Ordonnancement au plus tard}[0.3\linewidth]{
-    \begin{tikzpicture}
-      [xscale=0.25, yscale= 0.25,node distance=0.5cm]
-      \node (sil) at (1,0) {} ;
-      \node (eil) at (5,0) {} ;
-      \node [below of=eil,node distance=0.63cm]  {$\EE$};
-      \draw (sil.center) node[below=0.2cm] {$\ES$};
-      \node (sir) at (9,0) {} ;
-      \node (eir) at (13,0) {} ;
-      \node[below of= sir,node distance=0.63cm] {$\LS$};
-      \draw (eir.center) node[below=0.2cm] {$\LE$};
-      
-      \draw (0,0) -- (14,0);
-      
-      \draw[densely dotted] (4.95,0) -- (4.95,3);
-      \draw[densely dotted] (9.05,0) -- (9.05,3);
-      \draw[<->] (14,0.1) -- (14,2) node[midway,right] {$b_i$};
-      \draw[fill=white] (9,0) rectangle (13,2) node[midway] {$i$};
-      \draw[line width=3pt] (13,0) -- (13,3);
+      \draw (0,3.1) rectangle (4,4.4) node[midway] {$i$};
+      \draw (10,0.6) rectangle (14,1.9) node[midway] {$i$};
+
+      \draw[dashed] (3.9,0) -- (3.9,4.5);
+      \draw[dashed] (10,0) -- (10,4.5);
 
       \foreach \i in {0,...,14} {
         \draw (\i,0)  -- (\i,-0.2);
       }
     \end{tikzpicture}
-}
-\hfill
-\subcaptionbox{Intervalle de superposition minimum}[0.3\linewidth]{ 
-  \begin{tikzpicture}
-    [xscale=0.25, yscale= 0.25,node distance=0.5cm]
-    \node (sir) at (9,0) {} ;
-    \node (eil) at (5,0) {} ;
-    \node [below of=eil,node distance=0.63cm]  {$\EE$};
-    \node[below of= sir,node distance=0.63cm] {$\LS$};
-    \draw[<->] (4,2.2) -- (9,2.2) node[midway,label={}]
-    {};
-    
-    \draw (4,0) rectangle (9,2)
-    node[midway,color=black,align=center,text width=1.4cm]
-    {\scriptsize $moi_i$}; 
-    
-    
-    \draw (0,0) -- (14,0);
-    \draw[line width=3pt] (1,0) -- (1,3);
-    \draw[line width=3pt] (13,0) -- (13,3);
-    
-    \draw[<->] (-0.1,0.1) -- (-0.1,2.4) node[midway,left] {$b_i$};
+  \end{center}
 
-    \draw[densely dotted] (4.95,0) -- (4.95,3);
-    \draw[densely dotted] (9.05 ,0) -- (9.05,3);
-
-    \foreach \i in {0,...,14} {
-      \draw (\i,0)  -- (\i,-0.2);
-    }
-  \end{tikzpicture}
-}
-      \caption{Intervalle minimum de superposition d'une activité}
-    \label{fig:moi_CUSP}
-  \end{figure}
+  \caption{Intervalle minimum de superposition d'une activité}
+  \label{fig:moi_CUSP}
+\end{figure}
 \end{ex}
 
 Cette notion permet de définir une première règle d'ajustement. Cette
