--- a/main_file.tex
+++ b/main_file.tex
@@ -54,8 +54,8 @@
 \listoftables
 \input{part1/chap1.tex}
 \input{part2/PPC.tex}
-\input{part3/PLNE.tex}
-\input{part4/expe.tex}
+%\input{part3/PLNE.tex}
+%\input{part4/expe.tex}
 
 \printindex
 
